--- a/scripts/3.1_figures.Rmd
+++ b/scripts/3.1_figures.Rmd
@@ -62,11 +62,15 @@ b_dt <- fread(input = paste0(p_dat_derived, "belarus.csv")) # caution - huge fil
 # 2. Woody veg
 # 3. Crop
 # 4. Grassland
-plot_cols <- c("gray80", # gray, 1. Non-veg
-               terrain.colors(9)[1], # dark green, 2. Woody veg
-               terrain.colors(9)[5], # gold, 3. Crop
-               terrain.colors(9)[3] # light green, 4. Grassland
-               )
+plot_cols <- data.frame(
+  color = c("gray80", # gray, 1. Non-veg
+            terrain.colors(9)[1], # dark green, 2. Woody veg
+            terrain.colors(9)[5], # gold, 3. Crop
+            terrain.colors(9)[3] # light green, 4. Grassland
+               ),
+  name = c("1. Non-veg", "2. Woody veg", "3. Crop", "4. Grassland"),
+  breaks = c(1, 2, 3, 4))
+
 plot_cols_new <- c("gray80", # gray, 1. Non-veg
                terrain.colors(9)[5], # gold, 2 (formerly 3) Crop
                terrain.colors(9)[3], # light green, 3 (formerly 4) Grassland
@@ -92,8 +96,15 @@ show_col(plot_cols) # (topleft = 1, topright = 2, bottomleft = 3, bottomright = 
 
 
 # -------------------------- plot raw data --------------------------- #
-plot(b$y1987, main = "Belarus 1987", breaks = plot_breaks, col = plot_cols)
-plot(b$y2017, main = "Belarus 2017", breaks = plot_breaks, col = plot_cols)
+plot(b$y1987, main = "Belarus 1987", breaks = c(0, plot_cols$breaks), col = plot_cols$color)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
+
+plot(b$y2017, main = "Belarus 2017", breaks = c(0, plot_cols$breaks), col = plot_cols$color)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
 
 # ---------------------- plot abandonment age ---------------------- #
 plot(b_age_r$y2017, main = "Belarus Age of Abandonment 2017")
@@ -106,7 +117,7 @@ plot(b_age_r[[28:31]])
 # https://www.rdocumentation.org/packages/raster/versions/3.1-5/topics/animate
 
 animate(bt, pause = 0.5, zlim = c(1, 4), maxpixels=5000, n=1,
-        breaks = plot_breaks, col = plot_cols)
+        breaks = c(0, plot_cols$breaks), col = plot_cols$color)
 
 ```
 
@@ -209,5 +220,204 @@ ggplot(data = b_distill) +
 ggplot(data = b_length, aes(length)) + 
   geom_histogram() +
   theme_classic() # took forever!! Beware...
+```
+
+
+
+```{r pnv-habitat-lu-age-plot}
+pdf(file = paste0(p_output, "plots/pnv-habitat-lu-age-plot4.pdf"),
+    width = 9, height = 5.5)
+
+# Set plot layout
+# layout(mat = matrix(1:8, nrow = 2, ncol = 4),
+#        heights = c(1.5, 1.5),    # Heights of the two rows
+#        widths = c(2, 2, 2, 2))     # Widths of the two columns
+# layout.show(8)
+
+# layout(mat = matrix(1:8, nrow = 2, ncol = 4, byrow = TRUE),
+#        heights = c(1.5, 1.5),    # Heights of the two rows
+#        widths = c(2, 2, 2, 2))     # Widths of the two columns
+# layout.show(8)
+
+par(mfrow = c(2, 4),
+    oma = c(0,0,0,1))
+maxpixels <- 3000000
+
+# --------------------------------------- #
+# ------------ Shaanxi ------------------ #
+# --------------------------------------- #
+
+# ------------- potential natural vegetation ---------------- #
+plot(s_pnv, maxpixels = 100000, main = "Shaanxi, PNV",
+     breaks = c(0, filter(pnv_table, Number %in% unique(values(s_pnv)))$Number),
+     col = filter(pnv_table, Number %in% unique(values(s_pnv)))$Color)
+
+legend("topleft", 
+       legend = filter(pnv_table, Number %in% unique(values(s_pnv)))$Name, 
+       fill = filter(pnv_table, Number %in% unique(values(s_pnv)))$Color,
+       cex = 0.6, inset = 0)
+
+
+# ------------- habitat types ---------------- #
+plot(s_habitat, main = "Shaanxi, Habitat Types",
+     breaks = c(-1, 
+                filter(habitat_table, Number %in% unique(values(s_habitat)))$Number),
+     col = filter(habitat_table, Number %in% unique(values(s_habitat)))$Color,
+     maxpixels = maxpixels)
+
+legend("topleft", 
+       legend = filter(habitat_table, Number %in% unique(values(s_habitat)))$Name, 
+       fill = filter(habitat_table, Number %in% unique(values(s_habitat)))$Color,
+       cex = 0.6, inset = 0)
+
+# ------------- raw land use data ---------------- #
+plot(s$y2015, main = "Shaanxi 2015", 
+     breaks = c(0, plot_cols$breaks), col = plot_cols$color,
+     maxpixels = maxpixels)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
+
+# ------------- abandonment age ---------------- #
+plot(s_age_r$y2017, main = "Shaanxi, 2017: \nTime abandoned (years)",
+     maxpixels = maxpixels)
+
+
+# --------------------------------------- #
+# ------------ Belarus ------------------ #
+# --------------------------------------- #
+
+# ------------- potential natural vegetation ---------------- #
+plot(b_pnv, maxpixels = 100000, main = "Belarus, PNV",
+     breaks = c(0, filter(pnv_table, Number %in% unique(values(b_pnv)))$Number),
+     col = filter(pnv_table, Number %in% unique(values(b_pnv)))$Color)
+
+legend("bottomleft", 
+       legend = filter(pnv_table, Number %in% unique(values(b_pnv)))$Name, 
+       fill = filter(pnv_table, Number %in% unique(values(b_pnv)))$Color,
+       cex = 0.6, inset = 0)
+
+# ------------- habitat types ---------------- #
+plot(b_habitat, main = "Belarus, Habitat Types",
+     breaks = c(-1, 
+                filter(habitat_table, Number %in% unique(values(b_habitat)))$Number),
+     col = filter(habitat_table, Number %in% unique(values(b_habitat)))$Color,
+     maxpixels = maxpixels)
+
+legend("bottomleft", 
+       legend = filter(habitat_table, Number %in% unique(values(b_habitat)))$Name, 
+       fill = filter(habitat_table, Number %in% unique(values(b_habitat)))$Color,
+       cex = 0.6, inset = 0)
+
+
+# ------------- raw land use data ---------------- #
+plot(b$y2015, main = "Belarus 2015", 
+     breaks = c(0, plot_cols$breaks), col = plot_cols$color,
+     maxpixels = maxpixels)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
+
+
+# ------------- abandonment age ---------------- #
+plot(b_age_r$y2017, main = "Belarus, 2017: \nTime abandoned (years)",
+     maxpixels = maxpixels)
+
+
+dev.off()
+
+```
+
+
+```{r layout-backup}
+pdf(file = paste0(p_output, "plots/pnv-habitat-lu-age-plot3.pdf"),
+    width = 9, height = 5.5)
+
+# Set plot layout
+# layout(mat = matrix(1:8, nrow = 2, ncol = 4),
+#        heights = c(1.5, 1.5),    # Heights of the two rows
+#        widths = c(2, 2, 2, 2))     # Widths of the two columns
+# layout.show(8)
+
+layout(mat = matrix(1:8, nrow = 2, ncol = 4, byrow = TRUE),
+       heights = c(1.5, 1.5),    # Heights of the two rows
+       widths = c(2, 2, 2, 2))     # Widths of the two columns
+# layout.show(8)
+
+# par(mfrow(c(2, 4)))
+maxpixels <- 1000
+
+# ------------- potential natural vegetation ---------------- #
+plot(s_pnv, maxpixels = 100000, main = "Shaanxi, PNV",
+     breaks = c(0, filter(pnv_table, Number %in% unique(values(s_pnv)))$Number),
+     col = filter(pnv_table, Number %in% unique(values(s_pnv)))$Color)
+
+legend("topleft", 
+       legend = filter(pnv_table, Number %in% unique(values(s_pnv)))$Name, 
+       fill = filter(pnv_table, Number %in% unique(values(s_pnv)))$Color,
+       cex = 0.6, inset = 0)
+
+
+# belarus
+plot(b_pnv, maxpixels = 100000, main = "Belarus, PNV",
+     breaks = c(0, filter(pnv_table, Number %in% unique(values(b_pnv)))$Number),
+     col = filter(pnv_table, Number %in% unique(values(b_pnv)))$Color)
+
+legend("bottomleft", 
+       legend = filter(pnv_table, Number %in% unique(values(b_pnv)))$Name, 
+       fill = filter(pnv_table, Number %in% unique(values(b_pnv)))$Color,
+       cex = 0.6, inset = 0)
+
+# ------------- habitat types ---------------- #
+
+plot(s_habitat, main = "Shaanxi, Habitat Types",
+     breaks = c(-1, 
+                filter(habitat_table, Number %in% unique(values(s_habitat)))$Number),
+     col = filter(habitat_table, Number %in% unique(values(s_habitat)))$Color,
+     maxpixels = maxpixels)
+
+legend("topleft", 
+       legend = filter(habitat_table, Number %in% unique(values(s_habitat)))$Name, 
+       fill = filter(habitat_table, Number %in% unique(values(s_habitat)))$Color,
+       cex = 0.6, inset = 0)
+
+# belarus
+plot(b_habitat, main = "Belarus, Habitat Types",
+     breaks = c(-1, 
+                filter(habitat_table, Number %in% unique(values(b_habitat)))$Number),
+     col = filter(habitat_table, Number %in% unique(values(b_habitat)))$Color,
+     maxpixels = maxpixels)
+
+legend("bottomleft", 
+       legend = filter(habitat_table, Number %in% unique(values(b_habitat)))$Name, 
+       fill = filter(habitat_table, Number %in% unique(values(b_habitat)))$Color,
+       cex = 0.6, inset = 0)
+
+
+# ------------- raw land use data ---------------- #
+plot(s$y2015, main = "Shaanxi 2015", 
+     breaks = c(0, plot_cols$breaks), col = plot_cols$color,
+     maxpixels = maxpixels)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
+
+
+plot(b$y2015, main = "Belarus 2015", 
+     breaks = c(0, plot_cols$breaks), col = plot_cols$color,
+     maxpixels = maxpixels)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
+
+
+# ------------- abandonment age ---------------- #
+plot(s_age_r$y2017, main = "Shaanxi, 2017: Time abandoned (years)",
+     maxpixels = maxpixels)
+plot(b_age_r$y2017, main = "Belarus, 2017: Time abandoned (years)",
+     maxpixels = maxpixels)
+
+dev.off()
+
 ```
 
