--- a/scripts/4_biodiversity_dev.Rmd
+++ b/scripts/4_biodiversity_dev.Rmd
@@ -19,7 +19,10 @@ res(pnv) * 110 # = 0.9167 km grid (~ 1 km)
 
 # color palette information
 pnv_table <- read_csv(paste0(p_dat, "/Habitats/PNV/Hengl_2018_PNV/1km/pnv_biome.type_biome00k_c_1km_s0..0cm_2000..2017_v0.1.tif.csv"))
-pnv_col <- rgb(pnv_table$R, pnv_table$G, pnv_table$B, maxColorValue = 255)
+pnv_table <- pnv_table %>%
+  mutate(Color = rgb(R, G, B, maxColorValue = 255)) %>%
+  rename(Name = New.global.consolidated.biome.scheme)
+
 
 hist(pnv, maxpixels = 1000)
 extent(s$y2017)
@@ -30,23 +33,23 @@ plot(pnv, maxpixels = 1000)
 plot(pnv, maxpixels = 100000,
      main = "PNV, Hengl et al. 2018",
      breaks = c(0, pnv_table$Number), # note, you need a 0 at the beginning of the breaks
-     col = pnv_col, legend = FALSE)
-legend("top", legend = pnv_table$New.global.consolidated.biome.scheme[1:10], 
-       fill = pnv_col[1:10], cex = 0.5, inset = 0)
-legend("bottom", legend = pnv_table$New.global.consolidated.biome.scheme[11:21], 
-       fill = pnv_col[11:21], cex = 0.5, inset = 0)
+     col = pnv_table$Color, legend = FALSE)
+legend("top", legend = pnv_table$Name[1:10], 
+       fill = pnv_table$Color[1:10], cex = 0.5, inset = 0)
+legend("bottom", legend = pnv_table$Name[11:21], 
+       fill = pnv_table$Color[11:21], cex = 0.5, inset = 0)
 
 # shaanxi
 plot(pnv, maxpixels = 100000,
      ext = extent(s$y2017),
      breaks = c(0, pnv_table$Number), # note, you need a 0 at the beginning of the breaks
-     col = pnv_col)
+     col = pnv_table$Color)
 
 # belarus
 plot(pnv, maxpixels = 100000,
      ext = extent(b$y2017),
      breaks = c(0, pnv_table$Number), # note, you need a 0 at the beginning of the breaks
-     col = pnv_col)
+     col = pnv_table$Color)
 
 
 # crop:
@@ -58,49 +61,30 @@ sort(unique(values(b_pnv)))
 filter(pnv_table, Number %in% unique(values(s_pnv)))
 filter(pnv_table, Number %in% unique(values(b_pnv)))
 
+c(0, filter(pnv_table, Number %in% unique(values(s_pnv)))$Number)
+pnv_table$Color
+pnv_table
+
 # shaanxi
 par(mfrow = c(2,2))
 plot(s_pnv, maxpixels = 100000, main = "Shaanxi, PNV",
-     breaks = c(0, filter(pnv_table, Number %in% unique(values(s_pnv)))$Number), # note, you need a 0 at the beginning of the breaks
-     col = rgb(
-       filter(pnv_table, Number %in% unique(values(s_pnv)))$R, 
-       filter(pnv_table, Number %in% unique(values(s_pnv)))$G, 
-       filter(pnv_table, Number %in% unique(values(s_pnv)))$B, 
-       maxColorValue = 255
-       )
-     )
+     breaks = c(0, filter(pnv_table, Number %in% unique(values(s_pnv)))$Number),
+     col = filter(pnv_table, Number %in% unique(values(s_pnv)))$Color)
+
 legend("topleft", 
-       legend = filter(
-         pnv_table, Number %in% 
-           unique(values(s_pnv)))$New.global.consolidated.biome.scheme, 
-       fill = rgb(
-         filter(pnv_table, Number %in% unique(values(s_pnv)))$R, 
-         filter(pnv_table, Number %in% unique(values(s_pnv)))$G, 
-         filter(pnv_table, Number %in% unique(values(s_pnv)))$B, 
-         maxColorValue = 255
-         ),
+       legend = filter(pnv_table, Number %in% unique(values(s_pnv)))$Name, 
+       fill = filter(pnv_table, Number %in% unique(values(s_pnv)))$Color,
        cex = 0.6, inset = 0)
+
 
 # belarus
 plot(b_pnv, maxpixels = 100000, main = "Belarus, PNV",
-     breaks = c(0, filter(pnv_table, Number %in% unique(values(b_pnv)))$Number), # note, you need a 0 at the beginning of the breaks
-     col = rgb(
-       filter(pnv_table, Number %in% unique(values(b_pnv)))$R, 
-       filter(pnv_table, Number %in% unique(values(b_pnv)))$G, 
-       filter(pnv_table, Number %in% unique(values(b_pnv)))$B, 
-       maxColorValue = 255
-       )
-     )
+     breaks = c(0, filter(pnv_table, Number %in% unique(values(b_pnv)))$Number),
+     col = filter(pnv_table, Number %in% unique(values(b_pnv)))$Color)
+
 legend("bottomleft", 
-       legend = filter(
-         pnv_table, Number %in% 
-           unique(values(b_pnv)))$New.global.consolidated.biome.scheme, 
-       fill = rgb(
-         filter(pnv_table, Number %in% unique(values(b_pnv)))$R, 
-         filter(pnv_table, Number %in% unique(values(b_pnv)))$G, 
-         filter(pnv_table, Number %in% unique(values(b_pnv)))$B, 
-         maxColorValue = 255
-         ),
+       legend = filter(pnv_table, Number %in% unique(values(b_pnv)))$Name, 
+       fill = filter(pnv_table, Number %in% unique(values(b_pnv)))$Color,
        cex = 0.6, inset = 0)
 
 
@@ -109,8 +93,7 @@ legend("bottomleft",
 # area in each category, in km2 \\ Shaanxi
 s_area <- pnv_table %>%
   filter(Number %in% unique(values(s_pnv))) %>%
-  select(Number, 
-         Name = New.global.consolidated.biome.scheme) %>%
+  select(Number, Name) %>%
   mutate(
     area_percent = (table(getValues(s_pnv))/ncell(s_pnv))*100, # percentage in each
     area_km2 = 
@@ -126,8 +109,7 @@ s_area #
 # area in each category, in km2 \\ Belarus
 b_area <- pnv_table %>%
   filter(Number %in% unique(values(b_pnv))) %>%
-  select(Number, 
-         Name = New.global.consolidated.biome.scheme) %>%
+  select(Number, Name) %>%
   mutate(
     area_percent = (table(getValues(b_pnv))/ncell(b_pnv))*100, # percentage in each
     area_km2 = 
@@ -173,65 +155,41 @@ filter(pnv_table, Number %in% unique(values(b_pnv_250)))
 
 # plots
 # shaanxi
-plot(s_pnv_250, maxpixels = 100000, main = "Shaanxi, PNV",
-     breaks = c(0, filter(pnv_table, Number %in% unique(values(s_pnv_250)))$Number), # note, you need a 0 at the beginning of the breaks
-     col = rgb(
-       filter(pnv_table, Number %in% unique(values(s_pnv_250)))$R, 
-       filter(pnv_table, Number %in% unique(values(s_pnv_250)))$G, 
-       filter(pnv_table, Number %in% unique(values(s_pnv_250)))$B, 
-       maxColorValue = 255
-       )
-     )
+plot(s_pnv_250, maxpixels = 100000, main = "Shaanxi, PNV, 250 m resolution",
+     breaks = c(0, filter(pnv_table, Number %in% unique(values(s_pnv_250)))$Number),
+     col = filter(pnv_table, Number %in% unique(values(s_pnv_250)))$Color)
+
 legend("topleft", 
-       legend = filter(
-         pnv_table, Number %in% 
-           unique(values(s_pnv_250)))$New.global.consolidated.biome.scheme, 
-       fill = rgb(
-         filter(pnv_table, Number %in% unique(values(s_pnv_250)))$R, 
-         filter(pnv_table, Number %in% unique(values(s_pnv_250)))$G, 
-         filter(pnv_table, Number %in% unique(values(s_pnv_250)))$B, 
-         maxColorValue = 255
-         ),
+       legend = filter(pnv_table, Number %in% unique(values(s_pnv_250)))$Name, 
+       fill = filter(pnv_table, Number %in% unique(values(s_pnv_250)))$Color,
        cex = 0.6, inset = 0)
 
 # belarus
-plot(b_pnv_250, maxpixels = 100000, main = "Belarus, PNV",
-     breaks = c(0, filter(pnv_table, Number %in% unique(values(b_pnv_250)))$Number), # note, you need a 0 at the beginning of the breaks
-     col = rgb(
-       filter(pnv_table, Number %in% unique(values(b_pnv_250)))$R, 
-       filter(pnv_table, Number %in% unique(values(b_pnv_250)))$G, 
-       filter(pnv_table, Number %in% unique(values(b_pnv_250)))$B, 
-       maxColorValue = 255
-       )
-     )
+plot(b_pnv_250, maxpixels = 100000, main = "Belarus, PNV, 250 m resolution",
+     breaks = c(0, filter(pnv_table, Number %in% unique(values(b_pnv_250)))$Number),
+     col = filter(pnv_table, Number %in% unique(values(b_pnv_250)))$Color)
+
 legend("bottomleft", 
-       legend = filter(
-         pnv_table, Number %in% 
-           unique(values(b_pnv_250)))$New.global.consolidated.biome.scheme, 
-       fill = rgb(
-         filter(pnv_table, Number %in% unique(values(b_pnv_250)))$R, 
-         filter(pnv_table, Number %in% unique(values(b_pnv_250)))$G, 
-         filter(pnv_table, Number %in% unique(values(b_pnv_250)))$B, 
-         maxColorValue = 255
-         ),
+       legend = filter(pnv_table, Number %in% unique(values(b_pnv_250)))$Name, 
+       fill = filter(pnv_table, Number %in% unique(values(b_pnv_250)))$Color,
        cex = 0.6, inset = 0)
+
 
 # what habitat types are these?
 # belarus, mostly closed mixed 
 
 # area in each category, in km2 \\ Shaanxi
-s_area <- pnv_table %>%
-  filter(Number %in% unique(values(s_pnv))) %>%
-  select(Number, 
-         Name = New.global.consolidated.biome.scheme) %>%
-  mutate(
-    area_percent = (table(getValues(s_pnv))/ncell(s_pnv))*100, # percentage in each
+s_area_250 <- pnv_table %>%
+  filter(Number %in% unique(values(s_pnv_250))) %>%
+  select(Number, Name) %>%
+  mutate(area_percent = (table(getValues(s_pnv_250))/ncell(s_pnv_250))*100, # percentage in each
     area_km2 = 
-      length(raster::area(s_pnv)) * 
-      median(raster::area(s_pnv), na.rm = TRUE) * 
+      length(raster::area(s_pnv_250)) * 
+      median(raster::area(s_pnv_250), na.rm = TRUE) * 
       area_percent/100
   )
 s_area # 
+s_area_250
 # < 0.05 % in 9 (cool mixed forest) and 27 (desert)
 # 96% in steppe
 # 3.82% in temperate deciduous broadleaf forest
@@ -239,10 +197,8 @@ s_area #
 # area in each category, in km2 \\ Belarus
 b_area_250 <- pnv_table %>%
   filter(Number %in% unique(values(b_pnv_250))) %>%
-  select(Number, 
-         Name = New.global.consolidated.biome.scheme) %>%
-  mutate(
-    area_percent = (table(getValues(b_pnv_250))/ncell(b_pnv_250))*100, # percentage in each
+  select(Number, Name) %>%
+  mutate(area_percent = (table(getValues(b_pnv_250))/ncell(b_pnv_250))*100, # percentage in each
     area_km2 = 
       length(raster::area(b_pnv_250)) * 
       median(raster::area(b_pnv_250), na.rm = TRUE) * 
@@ -259,15 +215,37 @@ b_area
 
 
 ```{r habitat classifications}
+# level 1
 habitat <- raster("/Users/christophercrawford/Google Drive/_Projects/data/Habitats/Jung_GlobalHabitatTypes/iucn_habitatclassification_composite_lvl1_ver003.tif")
 
-# color palette information
+# level 2
+habitat <- raster("/Users/christophercrawford/Google Drive/_Projects/data/Habitats/Jung_GlobalHabitatTypes/iucn_habitatclassification_composite_lvl2_ver003.tif")
+
+stack()
+
+# color palette information #
+# level 1
 habitat_table <- read_delim(file = "/Users/christophercrawford/Google Drive/_Projects/data/Habitats/Jung_GlobalHabitatTypes/iucn_habitatclassification_code_ver003/styles/level1.clr", delim = " ", col_names = c("Number", "R", "G", "B", "Opacity", "Name"))
-habitat_table
-ht2
-pnv_table
-habitat_col <- rgb(pnv_table$R, pnv_table$G, pnv_table$B, maxColorValue = 255)
-pnv_table
+
+# level 2
+habitat_table <- read_delim(file = "/Users/christophercrawford/Google Drive/_Projects/data/Habitats/Jung_GlobalHabitatTypes/iucn_habitatclassification_code_ver003/styles/level2.clr", delim = " ", col_names = c("Number", "R", "G", "B", "Opacity", "Name"))
+habitat_table <- habitat_table %>%
+  mutate(Color = rgb(R, G, B, maxColorValue = 255))
+
+habitat_table[habitat_table$Name == "Forest", "Color"] <- terrain.colors(15)[1]
+habitat_table[habitat_table$Name == "Shrubland", "Color"] <- terrain.colors(15)[2]
+habitat_table[habitat_table$Name == "Savanna", "Color"] <- terrain.colors(15)[3]
+habitat_table[habitat_table$Name == "Grassland", "Color"] <- filter(plot_cols, name == "4. Grassland")$color
+habitat_table[habitat_table$Name == "Artificial", "Color"] <- filter(plot_cols, name == "3. Crop")$color
+
+plot_cols
+show_col(plot_cols$color)
+show_col(habitat_table$Color)
+show_col(terrain.colors(15))
+terrain.colors(9)
+show_col("006633")
+show_col("brown")
+
 
 habitat
 res(habitat) * 110 # = 0.0988 km grid (~ 0.10 km, ~ 100 m)
@@ -278,15 +256,49 @@ b_habitat <- crop(habitat, extent(b$y2017))
 
 sort(unique(values(s_habitat)))
 sort(unique(values(b_habitat)))
-filter(pnv_table, Number %in% unique(values(s_pnv)))
-filter(pnv_table, Number %in% unique(values(b_pnv)))
+filter(habitat_table, Number %in% unique(values(s_habitat)))
+filter(habitat_table, Number %in% unique(values(b_habitat)))
 
-plot(s_habitat, main = "Shaanxi Habitat types")
-plot(b_habitat, main = "Belarus Habitat types")
+
+# fancy plots
+par(mfrow = c(2,2))
+plot(s_habitat, main = "Shaanxi, Habitat Types",
+     breaks = c(-1, 
+                filter(habitat_table, Number %in% unique(values(s_habitat)))$Number),
+     col = filter(habitat_table, Number %in% unique(values(s_habitat)))$Color)
+
+legend("topleft", 
+       legend = filter(habitat_table, Number %in% unique(values(s_habitat)))$Name, 
+       fill = filter(habitat_table, Number %in% unique(values(s_habitat)))$Color,
+       cex = 0.6, inset = 0)
 
 # compare to raw land use data
-plot(b$y1987, main = "Belarus 1987", breaks = plot_breaks, col = plot_cols)
-plot(b$y2017, main = "Belarus 2017", breaks = plot_breaks, col = plot_cols)
+plot(s$y2015, main = "Shaanxi 2015", 
+     breaks = c(0, plot_cols$breaks), 
+     col = plot_cols$color)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
+
+# belarus
+plot(b_habitat, main = "Belarus, Habitat Types",
+     breaks = c(-1, 
+                filter(habitat_table, Number %in% unique(values(b_habitat)))$Number),
+     col = filter(habitat_table, Number %in% unique(values(b_habitat)))$Color)
+
+legend("bottomleft", 
+       legend = filter(habitat_table, Number %in% unique(values(b_habitat)))$Name, 
+       fill = filter(habitat_table, Number %in% unique(values(b_habitat)))$Color,
+       cex = 0.6, inset = 0)
+
+
+# compare to raw land use data
+plot(b$y2015, main = "Belarus 2015", breaks = c(0, plot_cols$breaks), col = plot_cols$color)
+legend("bottomleft", cex = 0.6, inset = 0,
+       legend = plot_cols$name, 
+       fill = plot_cols$color)
+
+
 
 habitat_table 
 # 0   Water                     
@@ -301,7 +313,7 @@ habitat_table
 # 1700 Unknown
 unique(values(b_habitat))
 table(getValues(b_habitat))/ncell(b_habitat)
-plot(b_habitat, main = "Belarus Habitat classes", breaks = c(0, 100, 300, 500, 1400), col = plot_cols[c(2, 4, 4, 3)])
+plot(b_habitat, main = "Belarus Habitat classes", breaks = c(0, 100, 300, 500, 1400), col = plot_cols$color[c(2, 4, 4, 3)])
 
 
 # summary stats
@@ -318,6 +330,8 @@ b_habitat_area <- habitat_table %>%
   )
 
 ```
+
+
 
 
 ```{r basemaps}
